@@ -4,7 +4,6 @@ import static org.assertj.core.api.Assertions.*;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
-import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
 
@@ -17,45 +16,28 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
-import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.test.context.support.WithMockUser;
-import org.springframework.test.web.servlet.MockMvc;
 
 import com.backsuend.coucommerce.auth.entity.Member;
 import com.backsuend.coucommerce.auth.entity.MemberStatus;
 import com.backsuend.coucommerce.auth.entity.Role;
-import com.backsuend.coucommerce.auth.service.UserDetailsImpl;
 import com.backsuend.coucommerce.catalog.entity.Product;
 import com.backsuend.coucommerce.catalog.enums.Category;
-import com.backsuend.coucommerce.catalog.repository.ProductRepository;
-import com.backsuend.coucommerce.catalog.service.ProductServiceImpl;
 import com.backsuend.coucommerce.member.repository.MemberRepository;
-import com.backsuend.coucommerce.review.dto.ReviewDto;
-import com.backsuend.coucommerce.review.dto.ReviewEditRequestDto;
 import com.backsuend.coucommerce.review.dto.ReviewRequestDto;
 import com.backsuend.coucommerce.review.dto.ReviewResponseDto;
 import com.backsuend.coucommerce.review.entity.Review;
 import com.backsuend.coucommerce.review.repository.ReviewRepository;
-import com.fasterxml.jackson.databind.ObjectMapper;
 
 @ExtendWith(MockitoExtension.class)
 @DisplayName(".isNotNull(); 단위 테스트")
 @WithMockUser(roles = "BUYER")
 public class ReviewServiceTest {
-
-	@Autowired
-	MockMvc mockMvc;
-
-	@Autowired
-	ObjectMapper objectMapper;
 
 	@Mock
 	ReviewRepository reviewRepository;
@@ -63,27 +45,17 @@ public class ReviewServiceTest {
 	@Mock
 	MemberRepository memberRepository;
 
-	@Mock
-	ProductRepository productRepository;
-
-	@InjectMocks
-	ProductServiceImpl productService; // 실제 구현체 + mock 주입
-
 	@Spy
 	@InjectMocks
 	ReviewServiceImpl reviewService; // 실제 구현체 + mock 주입
 
 	Pageable pageable;
 	Page<Review> mockPage;
-	Page<ReviewResponseDto> mockPage2;
 	Page<Product> mockProduct;
 	Long member_id = 1L;
 	Long product_id = 1L;
 	Member member = null;
 	Product product = null;
-
-	private UserDetailsImpl testUserDetails;
-	private Authentication authentication;
 
 	@BeforeEach
 	void setUp() {
@@ -115,13 +87,6 @@ public class ReviewServiceTest {
 		List<Review> list = List.of(review1, review2);
 		mockPage = new PageImpl<>(list, pageable, list.size());
 
-		// 테스트용 인증 객체 생성
-		Long userId = 1L;
-		String username = "test11testest@example.com";
-		List<SimpleGrantedAuthority> authorities = List.of(new SimpleGrantedAuthority(Role.BUYER.name()));
-		testUserDetails = new UserDetailsImpl(userId, username, "password", authorities, true, true);
-		authentication = new UsernamePasswordAuthenticationToken(testUserDetails, null, authorities);
-
 	}
 
 	@AfterEach
@@ -131,10 +96,9 @@ public class ReviewServiceTest {
 
 	@Test
 	@DisplayName("해당상품의 리뷰 목록을 조회한다.")
-	void getReviews() throws Exception {
+	void getReviews() {
 
 		//given
-		Long memberId = testUserDetails.getId();
 
 		Product mockCont = mockProduct.getContent().stream()
 			.filter(p -> p.getId().equals(product_id) && p.getMember().getId().equals(member_id))
@@ -148,7 +112,7 @@ public class ReviewServiceTest {
 
 		// then
 		assertThat(result).isNotNull();
-		assertThat(result.getContent().get(0).getContent()).isEqualTo("내용입니다.1");
+		assertThat(result.getContent().getFirst().getContent()).isEqualTo("내용입니다.1");
 	}
 
 	@Test
@@ -156,7 +120,6 @@ public class ReviewServiceTest {
 	void createReview() {
 
 		// given
-		Long memberId = testUserDetails.getId();
 
 		Member mockMember = Member.builder()
 			.id(member_id)
@@ -168,7 +131,7 @@ public class ReviewServiceTest {
 			.findFirst()
 			.orElse(null);
 
-		ReviewRequestDto dto = new ReviewRequestDto(product_id, member_id, "내용입니다.1", null);
+		ReviewRequestDto dto = new ReviewRequestDto("내용입니다.1", 3, null);
 
 		Review savedReview = Review.builder()
 			.product(mockCont)
@@ -183,13 +146,12 @@ public class ReviewServiceTest {
 		when(reviewRepository.save(any(Review.class))).thenReturn(savedReview);
 
 		// when
-		ReviewResponseDto result = reviewService.createReview(product_id, dto, testUserDetails.getId());
+		ReviewResponseDto result = reviewService.createReview(product_id, dto, member_id);
 
 		// then
 		assertNotNull(result);
 		assertEquals(dto.getContent(), result.getContent());
-		assertEquals(mockMember.getId(), result.getMember_id());
-		assertEquals(mockCont.getId(), result.getProduct_id());
+		assertEquals(mockMember.getId(), result.getMemberId());
 		verify(reviewRepository).save(any(Review.class));
 	}
 
@@ -198,8 +160,8 @@ public class ReviewServiceTest {
 	void updateReview() {
 
 		// given
-		Long memberId = testUserDetails.getId();
 		Long review_id = 1L;
+		String content = "내용입니다.";
 
 		Member mockMember = Member.builder()
 			.id(member_id)
@@ -211,13 +173,13 @@ public class ReviewServiceTest {
 			.findFirst()
 			.orElse(null);
 
-		ReviewEditRequestDto dto = new ReviewEditRequestDto(1L, product_id, "내용입니다.1", null);
+		ReviewRequestDto dto = new ReviewRequestDto("내용입니다.1", 3, null);
 
 		Review review = Review.builder()
-			.id(dto.getId())
+			.id(review_id)
 			.product(mockCont)
 			.member(mockMember)
-			.content(dto.getContent())
+			.content(content)
 			.parentReview(null)
 			.build();
 
@@ -227,14 +189,12 @@ public class ReviewServiceTest {
 		doReturn(review).when(reviewService).validateReviewOwnership(product_id, review_id, mockMember);
 
 		// when
-		ReviewResponseDto result = reviewService.updateReview(product_id, review_id, dto, testUserDetails.getId());
+		ReviewResponseDto result = reviewService.updateReview(product_id, review_id, dto, member_id);
 
 		// then
 		assertNotNull(result);
-		assertEquals(dto.getId(), result.getId());
 		assertEquals(dto.getContent(), result.getContent());
-		assertEquals(mockMember.getId(), result.getMember_id());
-		assertEquals(mockCont.getId(), result.getProduct_id());
+		assertEquals(mockMember.getId(), result.getMemberId());
 	}
 
 	@Test
@@ -242,7 +202,6 @@ public class ReviewServiceTest {
 	void deleteReview() {
 
 		// given
-		Long memberId = testUserDetails.getId();
 
 		Long review_id = 1L;
 
@@ -251,8 +210,7 @@ public class ReviewServiceTest {
 			.findFirst()
 			.orElse(null);
 
-		ReviewDto dto = new ReviewDto(review_id, product_id, member_id, "내용입니다.1",
-			LocalDateTime.now(), null, null);
+		ReviewRequestDto dto = new ReviewRequestDto("내용입니다.1", 3, null);
 
 		Review review = Review.builder()
 			.id(review_id)
@@ -267,7 +225,7 @@ public class ReviewServiceTest {
 		doReturn(review).when(reviewService).validateReviewOwnership(product_id, review_id, member);
 
 		// when & then
-		assertDoesNotThrow(() -> reviewService.deleteReview(product_id, review_id, testUserDetails.getId()));
+		assertDoesNotThrow(() -> reviewService.deleteReview(product_id, review_id, member_id));
 
 	}
 }
